--- a/cadastro_usuario/cadastro_usuario.html
+++ b/cadastro_usuario/cadastro_usuario.html
@@ -29,9 +29,9 @@
                 </div>
                 <div class="kanan">
                     <nav class="nav">
-                        <a class="nav-link active" href="../../parkingbrTCC/login/tela_login.html" id="nav1">Home</a>
-                        <a class="nav-link" href="../../parkingbrTCC/info_gestor/info_gestor.html" id="nav2">Seja um Parceiro</a>
-                        <a class="nav-link" href="../../parkingbrTCC/info_sobre/info_sobre.html" id="nav4">Sobre</a>
+                        <a class="nav-link active" href="../parkingbrTCC/login/tela_login.html" id="nav1">Home</a>
+                        <a class="nav-link" href="../parkingbrTCC/info_gestor/info_gestor.html" id="nav2">Seja um Parceiro</a>
+                        <a class="nav-link" href="../parkingbrTCC/info_sobre/info_sobre.html" id="nav4">Sobre</a>
                     </nav>
                 </div>
             </div>
