--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"/>
 
 	<!--Custom styles-->
-	<link rel="stylesheet" type="text/css" href="css/estilo.css"/>
+	<link rel="stylesheet" type="text/css" href="index.css"/>
 </head>
 
 <body>
@@ -28,9 +28,9 @@
                 </div>
                 <div class="kanan">
 					<nav class="nav" id="id_menu">						
-						<a class="nav-link active" href="../parkingbrTCC/login/tela_login.html" id="nav1">Home</a>
-						<a class="nav-link" href="../../parkingbrTCC/info_gestor/info_gestor.html" id="nav2">Seja um Parceiro</a>
-						<a class="nav-link" href="../../parkingbrTCC/info_sobre/info_sobre.html" id="nav3">Sobre</a>
+						<a class="nav-link active" href="index.html" id="nav1">Home</a>
+						<a class="nav-link" href="infoGestor.html" id="nav2">Seja um Parceiro</a>
+						<a class="nav-link" href="infoSobre.html" id="nav3">Sobre</a>
 					</nav>
                 </div>
             </div>
@@ -72,7 +72,7 @@
 			</div>
 			<div class="card-footer" id="id_campo_inferior">
 				<div class="d-flex justify-content-center links">
-                    Ainda não tem conta?<a href="../../Project-TCC/cadastro_usuario/cadastro_usuario.html">Cadastre-se</a>
+                    Ainda não tem conta?<a href="cadastroUsuario.html">Cadastre-se</a>
 				</div>
 				<div class="d-flex justify-content-center">
 					<a href="#fundo_modal" rel="modal:open">Esqueceu sua senha?</a>
