--- a/infoSobre.html
+++ b/infoSobre.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"/>
 
     <!--Custom styles-->
-    <link rel="stylesheet" type="text/css" href="css/estilo.css"/>
+    <link rel="stylesheet" type="text/css" href="infoSobre.css"/>
 </head>
 
 <body>
@@ -29,9 +29,9 @@
                     </div>
                     <div class="kanan">
                         <nav class="nav">
-                            <a class="nav-link active" href="../parkingbrTCC/login/tela_login.html" id="nav1">Home</a>
-                            <a class="nav-link" href="../parkingbrTCC/info_gestor/info_gestor.html" id="nav2">Seja um Parceiro</a>
-                            <a class="nav-link" href="../parkingbrTCC/info_sobre/info_sobre.html" id="nav4">Sobre</a>
+                            <a class="nav-link active" href="index.html" id="nav1">Home</a>
+                            <a class="nav-link" href="infoGestor.html" id="nav2">Seja um Parceiro</a>
+                            <a class="nav-link" href="infoSobre.html" id="nav4">Sobre</a>
                         </nav>
                     </div>
                 </div>
