--- a/cadastroUsuario.html
+++ b/cadastroUsuario.html
@@ -198,7 +198,7 @@
                                 <label class="form-check-label" for="id_nao">Não</label>
                             </div>
 
-                            <small id="emailHelp" class="form-text text-muted">Caso cadastre o veículo neste momento, será obrigatório na reserva de vaga.</small>
+                            <small id="emailHelp" class="form-text text-muted">Caso não cadastre o veículo neste momento, será obrigatório na reserva de vaga.</small>
                         </div>
                     </div>
                 </div> 
