--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<nav class="nav" id="id_menu">						
 						<a class="nav-link active" href="index.html" id="nav1">Home</a>
 						<a class="nav-link" href="infoGestor.html" id="nav2">Seja um Parceiro</a>
-						<a class="nav-link" href="infoSobre.html" id="nav3">Sobre</a>
+						<a class="nav-link" href="infoSobre.html" id="nav3">Quem Somos</a>
 					</nav>
                 </div>
             </div>
