--- a/infoSobre.html
+++ b/infoSobre.html
@@ -31,7 +31,7 @@
                         <nav class="nav">
                             <a class="nav-link active" href="index.html" id="nav1">Home</a>
                             <a class="nav-link" href="infoGestor.html" id="nav2">Seja um Parceiro</a>
-                            <a class="nav-link" href="infoSobre.html" id="nav4">Sobre</a>
+                            <a class="nav-link" href="infoSobre.html" id="nav4">Quem Somos</a>
                         </nav>
                     </div>
                 </div>
