--- a/cadastroUsuario.html
+++ b/cadastroUsuario.html
@@ -13,7 +13,10 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"/>
     
     <!--Fontawesome CDN-->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"/>
+    
+    <!--Default style of Header and Footer-->
+    <link rel="stylesheet" href="header-footer.css"/>
 
     <!--Custom styles-->
     <link rel="stylesheet" type="text/css" href="cadastroUsuario.css"/>
@@ -121,7 +124,7 @@
                         <div class="col col-lg-12">
                             <div class="form-group">
                                 <label for="id_razao_social" class="control-label">Razão Social</label>                   
-                                <input type="text" name="cnpj" maxlength="15" placeholder="Razão Social" class="form-control" id="id_razao_social"/>
+                                <input type="text" name="rsocial" maxlength="15" placeholder="Razão Social" class="form-control" id="id_razao_social"/>
                             </div>
                         </div>
                     </div>
@@ -348,12 +351,14 @@
     $('#id_ano').mask("9999");
 </script>
 
+<!--
 <script>
     /* Alerta de campos form OK e CADASTRADO */
     function enviaForm() {
         alert("Cadastro feito");
     }
 </script>
+-->
 
 </body>
 
