Integração do formulário com MySQL e servidor Xampp

--- a/infoGestor.html
+++ b/infoGestor.html
@@ -16,7 +16,10 @@
     <!--Fontawesome CDN-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"/>
 
-    <!--Custom styles-->
+    <!--Default style of Header and Footer-->
+    <link rel="stylesheet" href="header-footer.css"/>
+
+    <!--Seja Parceiro CSS-->
     <link rel="stylesheet" type="text/css" href="infoGestor.css"/>
 </head>
 
@@ -31,7 +34,7 @@
                         <nav class="nav">
                             <a class="nav-link active" href="index.html" id="nav1">Home</a>
                             <a class="nav-link" href="infoGestor.html" id="nav2">Seja um Parceiro</a>
-                            <a class="nav-link" href="infoSobre.html" id="nav4">Sobre</a>
+                            <a class="nav-link" href="infoSobre.html" id="nav3">Quem Somos</a>
                         </nav>
                     </div>
                 </div>
